CCS-3695, CCS-3687, CCS-3686: Fixing style issues and styling assemblies
Added assembly demo file from rhel docs
Adding work on templating/styling assemblies
Fixed images breaking out of docs
Fixed table borders not showing

--- a/pantheon-bundle/frontend/src/web-assets/scss/pantheon.scss
+++ b/pantheon-bundle/frontend/src/web-assets/scss/pantheon.scss
@@ -1,3 +1,16 @@
+body {
+  font-family: RedHatText, Overpass, 'Helvetica Neue', Arial, sans-serif;
+  line-height: 1.6;
+}
+
+.rhdocs-content,
+.rhdocs-header,
+cp-documentation {
+  max-width: 875px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 cp-documentation {
   display: block;
 }
@@ -6,10 +19,6 @@ cp-documentation {
   padding: 40px 60px;
 
   cp-documentation {
-    max-width: 875px;
-    margin-left: auto;
-    margin-right: auto;
-
     &.rhdocs {
       padding: 0;
     }
